--- a/docbuild/api/Scrapbook101core.Models.Category.yml
+++ b/docbuild/api/Scrapbook101core.Models.Category.yml
@@ -22,11 +22,12 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Category
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 10
+    startLine: 13
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
-  summary: "\nDefines a category in Scrapbook.\n"
+  summary: "\nDefines the categories in Scrapbook101core.\n"
+  remarks: "\nThe list of categories is read in from one document from the database identified by\nan <xref href=\"Scrapbook101core.Models.Category.Id\" data-throw-if-not-resolved=\"false\"></xref> and <xref href=\"Scrapbook101core.Models.Category.Type\" data-throw-if-not-resolved=\"false\"></xref>.\n"
   example: []
   syntax:
     content: public class Category
@@ -65,7 +66,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Id
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 12
+    startLine: 15
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -125,7 +126,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Type
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 16
+    startLine: 19
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -185,7 +186,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Categories
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 20
+    startLine: 23
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -217,6 +218,12 @@ items:
   modifiers.vb:
   - Public
 references:
+- uid: Scrapbook101core.Models.Category.Id
+  commentId: P:Scrapbook101core.Models.Category.Id
+  isExternal: true
+- uid: Scrapbook101core.Models.Category.Type
+  commentId: P:Scrapbook101core.Models.Category.Type
+  isExternal: true
 - uid: Scrapbook101core.Models
   commentId: N:Scrapbook101core.Models
   name: Scrapbook101core.Models
