--- a/docbuild/api/Scrapbook101core.Models.CategoryFields.yml
+++ b/docbuild/api/Scrapbook101core.Models.CategoryFields.yml
@@ -33,10 +33,12 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFields
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 39
+    startLine: 47
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
+  summary: "\nRepresents all the possible category fields. A category field may apply to some categories and not to others.\n"
+  example: []
   syntax:
     content: public class CategoryFields
     content.vb: Public Class CategoryFields
@@ -74,7 +76,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: this[]
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 44
+    startLine: 52
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -124,7 +126,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Artist
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 51
+    startLine: 59
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -176,7 +178,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Author
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 54
+    startLine: 62
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -228,7 +230,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: BirthDate
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 57
+    startLine: 65
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -280,7 +282,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Director
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 60
+    startLine: 68
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -332,7 +334,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Genre
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 63
+    startLine: 71
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -384,7 +386,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Highlight
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 66
+    startLine: 74
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -436,7 +438,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Location
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 69
+    startLine: 77
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -488,7 +490,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Lodging
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 72
+    startLine: 80
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -540,7 +542,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Synopsis
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 75
+    startLine: 83
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -592,7 +594,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Theme
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 78
+    startLine: 86
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -644,7 +646,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Type
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 81
+    startLine: 89
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -696,7 +698,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Who
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 84
+    startLine: 92
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -748,7 +750,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Year
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 87
+    startLine: 95
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
