--- a/docbuild/api/Scrapbook101core.Models.CombinedModel.yml
+++ b/docbuild/api/Scrapbook101core.Models.CombinedModel.yml
@@ -24,10 +24,13 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CombinedModel
     path: ../Scrapbook101core/Models/CombinedModel.cs
-    startLine: 5
+    startLine: 13
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
+  summary: "\nRepresents a MVC convenience model for display purposes in some view pages.\n"
+  remarks: "\nThis model combine the <xref href=\"Scrapbook101core.Models.Item\" data-throw-if-not-resolved=\"false\"></xref> class/model with \nlists of categories and lists of files that are useful for pages that require both\nthe Item class and category and file support.\n"
+  example: []
   syntax:
     content: public class CombinedModel
     content.vb: Public Class CombinedModel
@@ -65,7 +68,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: Item
     path: ../Scrapbook101core/Models/CombinedModel.cs
-    startLine: 7
+    startLine: 15
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -100,7 +103,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryItemsForDisplay
     path: ../Scrapbook101core/Models/CombinedModel.cs
-    startLine: 9
+    startLine: 17
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -135,7 +138,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFieldMappingList
     path: ../Scrapbook101core/Models/CombinedModel.cs
-    startLine: 10
+    startLine: 18
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -170,7 +173,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: LocalUploadFileList
     path: ../Scrapbook101core/Models/CombinedModel.cs
-    startLine: 11
+    startLine: 19
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -205,7 +208,7 @@ items:
       repo: https://github.com/travelmarx/scrapbook101core.git
     id: LocalHttpPostedFileList
     path: ../Scrapbook101core/Models/CombinedModel.cs
-    startLine: 12
+    startLine: 20
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -223,6 +226,12 @@ items:
   modifiers.vb:
   - Public
 references:
+- uid: Scrapbook101core.Models.Item
+  commentId: T:Scrapbook101core.Models.Item
+  parent: Scrapbook101core.Models
+  name: Item
+  nameWithType: Item
+  fullName: Scrapbook101core.Models.Item
 - uid: Scrapbook101core.Models
   commentId: N:Scrapbook101core.Models
   name: Scrapbook101core.Models
@@ -525,12 +534,6 @@ references:
   name: Item
   nameWithType: CombinedModel.Item
   fullName: Scrapbook101core.Models.CombinedModel.Item
-- uid: Scrapbook101core.Models.Item
-  commentId: T:Scrapbook101core.Models.Item
-  parent: Scrapbook101core.Models
-  name: Item
-  nameWithType: Item
-  fullName: Scrapbook101core.Models.Item
 - uid: Scrapbook101core.Models.CombinedModel.CategoryItemsForDisplay*
   commentId: Overload:Scrapbook101core.Models.CombinedModel.CategoryItemsForDisplay
   name: CategoryItemsForDisplay
