--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,23 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+jobs:
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - script: echo hello from Linux
+- job: macOS
+  pool:
+    vmImage: 'macOS-latest'
+  steps:
+  - script: echo hello from macOS
+- job: Windows
+  pool:
+    vmImage: 'windows-latest'
+  steps:
+  - script: echo hello from Windows
+
 steps:
 - bash: echo "Hello World"
 - script: dotnet build --configuration $(buildConfiguration)
