Update azure-pipelines.yml for Azure Pipelines
Add test for using PowerShell script.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: echo "hello from Windows"
+- powershell: .\docbuilds\builddocs.ps1
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
