--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- powershell: .\docbuild\builddocs.ps1
+- pwsh: .\docbuild\builddocs.ps1
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
