--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ variables:
 
 steps:
 - pwsh: .\docbuild\builddocs.ps1
+  displayName: PowerShell builddocs.ps1 task
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
