--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- pwsh: .\docbuild\builddocs.ps1
+- pwsh: .\scripts\builddocs.ps1
   displayName: PowerShell builddocs.ps1 task
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
