Rearrange about page. Test pipeline git command.

--- a/docbuild/articles/toc.yml
+++ b/docbuild/articles/toc.yml
@@ -16,5 +16,8 @@
   href: handling-assets.md
 - name: About This Site
   href: about-this-site.md
-- name: Azure Pipeline
-  href: azure-pipeline.md
+  items:
+  - name: Build with DocFX
+    href: build-with-docfx.md
+  - name: Azure Pipeline
+    href: azure-pipeline.md
