Modify pipeline config.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- checkout: self
+  persistCredentials: true
+  clean: true
 - pwsh: .\scripts\builddocs.ps1
   displayName: PowerShell builddocs.ps1 task
 - script: dotnet build --configuration $(buildConfiguration)
