--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,12 @@ variables:
   buildConfiguration: 'Release'
   system.debug: true
 
+- task: CmdLine@2
+  inputs:
+    script: |
+      Tool: git
+      Arguments: ls-files
+
 steps:
 - checkout: self
   persistCredentials: true
