--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,14 @@ variables:
 steps:
 - checkout: self
   persistCredentials: true
-  failOnStderr: false
   clean: true
 - task: CmdLine@2
   inputs:
     script: git ls-files
 - pwsh: .\scripts\builddocs.ps1
   displayName: PowerShell builddocs.ps1 task
+  persistCredentials: true
+  clean: true
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
