--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
     script: git ls-files
 - pwsh: .\scripts\builddocs.ps1
   displayName: PowerShell builddocs.ps1 task
+  failOnStderr: false
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
