Local build check in.

--- a/docbuild/articles/toc.yml
+++ b/docbuild/articles/toc.yml
@@ -20,4 +20,4 @@
   - name: Build with DocFX
     href: build-with-docfx.md
   - name: Azure Pipeline
-    href: azure-pipeline.md
+    href: about-pipeline.md
