--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -269,38 +269,41 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/about-this-site.md",
+      "source_relative_path": "articles/about-pipeline.md",
       "output": {
         ".html": {
-          "relative_path": "articles/about-this-site.html",
-          "hash": "jBl95hkHf1+JEo/w1ZbXew=="
+          "relative_path": "articles/about-pipeline.html",
+          "hash": "KlO/93Y6DdK87i7PIUfs5g=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/azure-pipeline.md",
+      "source_relative_path": "articles/about-this-site.md",
       "output": {
         ".html": {
-          "relative_path": "articles/azure-pipeline.html",
-          "hash": "8vW5K2KhwpRtjNR3bntmHQ=="
+          "relative_path": "articles/about-this-site.html",
+          "hash": "trpDjyOumlksuIB2HLngCQ=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "UidNotFound"
+      ],
       "type": "Conceptual",
       "source_relative_path": "articles/build-with-docfx.md",
       "output": {
         ".html": {
           "relative_path": "articles/build-with-docfx.html",
-          "hash": "KpxFuNwut+CIbhX1sMZb4A=="
+          "hash": "ESFZ9CgLczXZ4KdKkd2Kxg=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -312,7 +315,7 @@
           "hash": "/GkB8Y5L1dNgQUY9en7+Mw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -324,7 +327,7 @@
           "hash": "svVfgvHfII/vcJUxaMz5rg=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -336,7 +339,7 @@
           "hash": "WNl9bMJQq0M6q1BEQh11Fw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -348,7 +351,7 @@
           "hash": "mggfN3JXqtNl/OQz3QWUzQ=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -360,7 +363,7 @@
           "hash": "Piflp6UmT4BxXjGe8+pfaA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -372,7 +375,7 @@
           "hash": "Sh9wFeaGeWbXsPWT4UmexA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -384,7 +387,7 @@
           "hash": "Z0A14KKM4TRzTFFFyCibwg=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -396,7 +399,7 @@
           "hash": "o/JchL5CkLKEhBc5zHJS5w=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -405,7 +408,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/toc.html",
-          "hash": "zOAj35oVE14cMrnS3zdLhA=="
+          "hash": "lT961gTPyKEu0lk6LXGK6Q=="
         }
       },
       "is_incremental": false,
@@ -508,7 +511,7 @@
           "hash": "rgE7SbCH5gsDR28UNPHSSQ=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -547,17 +550,17 @@
           "total_file_count": 0,
           "skipped_file_count": 0
         },
+        "ConceptualDocumentProcessor": {
+          "can_incremental": true,
+          "incrementalPhase": "build",
+          "total_file_count": 13,
+          "skipped_file_count": 11
+        },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 20,
           "skipped_file_count": 20
-        },
-        "ConceptualDocumentProcessor": {
-          "can_incremental": true,
-          "incrementalPhase": "build",
-          "total_file_count": 13,
-          "skipped_file_count": 13
         }
       }
     },
